removee completed